[package]
name = "rtc-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = "1.0.111"
tokio = "1.35.1"
webrtc = "0.9.0"
base64 = "0.21.7"
hound = "3.5.1"
anyhow = "1.0.79"



 [[bin]]
 name = "offer"
 path = "src/offer.rs"

 [[bin]]
 name = "answer"
 path = "src/answer.rs"
